# gestion-de-pensiones

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  ARCHITECTURE.md  DEPLOY.md  Dockerfile  SECURITY.md  pyproject.toml  railway.json
backend/src/: main.py
backend/src/api/dependencies/: auth.py
backend/src/api/routers/: auth_router.py  consumption_router.py  payments_router.py  pensioners_router.py  police_router.py  settings_router.py
backend/src/application/dtos/: consumption_dtos.py  payment_dtos.py  pensioner_dtos.py  police_dtos.py  pricing_dtos.py
backend/src/application/helpers/: meal_cost.py
backend/src/core/: config.py
backend/src/domain/entities/: __init__.py  consumption.py  extra_consumption.py  menu_item.py  payment.py  pensioner.py  police.py  pricing_config.py  user.py
backend/src/domain/repositories/: __init__.py  consumption_repository.py  payment_repository.py  pensioner_repository.py  police_repository.py  pricing_config_repository.py  user_repository.py
backend/src/infrastructure/: config.py
backend/src/infrastructure/auth/: __init__.py  hashing.py  jwt_handler.py
backend/src/infrastructure/database/: seed.py  session.py
backend/src/infrastructure/repositories/: __init__.py  payment_repository_impl.py  pensioner_consumption_repository_impl.py  pensioner_repository_impl.py  police_consumption_repository_impl.py  police_repository_impl.py  (+1 more)
backend/tests/unit/: test_civilian_entity.py  test_civilian_use_cases.py  test_close_day_use_case.py  test_consumption_entity.py  test_police_consumption.py
(+99 files in other folders)
